apps/nginx/policies/deny-egress-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-egress-all
  namespace: kube-public
spec:
  policyTypes:
  - Egress
  podSelector: {}
