apps/nginx/policies/deny-ingress-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-ingress-all
  namespace: kube-public
spec:
  podSelector: {}
